--- a/register.html
+++ b/register.html
@@ -41,16 +41,22 @@
 
         <div class="login-div">
 
-            <input type="text" placeholder="Email address or phone number">
+            <div class="name-area">
+                
+                <input type="text" id="Firstname"  placeholder="First name">
+
+                <input type="text" id="Lastname" placeholder="Last name">
+            </div>
+            <input type="text" placeholder="Email">
             <br>
             <input type="text" placeholder="password?">
             <br>
-            <button>sign in</button>
+            <button>Sign Up</button>
             <br>
-            <a href="#">forget password?</a>
+        
             <hr>
 
-            <button type="submit" id="forgotten-btn">create new account</button>
+            <button  type="submit" id="forgotten-btn">Login</button>
 
         </div>
 
