Updated success fully

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <br>
             <button>sign in</button>
             <br>
-            <a href="#">forget password?</a>
+            <a id="forgottend-link" href="#">forget password?</a>
             <hr>
 
-            <button type="submit" id="forgotten-btn">create new account</button>
+            <a  href="/register.html" id="forgotten-btn">create new account</a>
 
         </div>
 
