--- a/register.html
+++ b/register.html
@@ -42,8 +42,8 @@
         <div class="login-div">
 
             <div class="name-area">
-                
-                <input type="text" id="Firstname"  placeholder="First name">
+
+                <input type="text" id="Firstname" placeholder="First name">
 
                 <input type="text" id="Lastname" placeholder="Last name">
             </div>
@@ -53,10 +53,10 @@
             <br>
             <button>Sign Up</button>
             <br>
-        
+
             <hr>
 
-            <button  type="submit" id="forgotten-btn">Login</button>
+            <a  href="./index.html" id="forgotten-btn">login</a>
 
         </div>
 
